# arquitetura_dados

./: .$arquitetura_mvp1_resumida_aws2026.drawio.dtmp  .$arquitetura_mvp1_vini.drawio.bkp  .gitignore  AGENTS.md  Desenho AWS.mmd  PLAN.md  README.md  apresentacao_pipeline_sor_sot_spec.md  apresentacao_pipeline_sor_sot_spec_atualizada.md  arquitetura_mvp1_aws.drawio  arquitetura_mvp1_aws4_v2.drawio  arquitetura_mvp1_aws_awsicons.drawio  arquitetura_mvp1_estilo_blog_aws2026.drawio  arquitetura_mvp1_resumida_aws2026.drawio  arquitetura_mvp1_resumida_componentes.drawio  arquitetura_mvp1_simplificada_aws4.drawio  arquitetura_mvp1_vini.drawio  diagrama_1.mmd  diagrama_2_failed.mmd  diagrama_2_sucess.mmd  diagrama_3_sucess.mmd  diagrama_4_sucess.mmd  diagrama_5_sucess.mmd  diagrama_6_sucess.mmd  diagrama_7_sucess.mmd  diagrama_8_sucess.mmd  diagrama_9_sucess.mmd  plano_codex_mvp1_sor_sot_spec.md  plano_codex_mvp1_sor_sot_spec_bkp.md  plano_mvp1_codex.md  requirements-jobglue.txt
glue_jobs_platform/: README.md  pyproject.toml
glue_jobs_platform/jobs/: __init__.py
glue_jobs_platform/jobs/job_sor/: __init__.py  main.py
glue_jobs_platform/jobs/job_sor/config/: config_destino_dados.json  config_origem_dados.json
glue_jobs_platform/jobs/job_sot/: __init__.py  main.py
glue_jobs_platform/jobs/job_spec/: __init__.py  main.py
glue_jobs_platform/src/glue_jobs_lib/: __init__.py  arguments.py  config.py  io.py  metadata.py  models.py  predicates.py  resolvers.py  runner.py  sql.py  templates.py
glue_jobs_platform/tests/: test_jobs_contract.py  test_resolvers.py
(+119 files in other folders)
