[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glue-jobs-lib"
version = "0.1.0"
description = "Biblioteca reutilizavel para padronizar jobs AWS Glue SOT, SPEC e SOR."
requires-python = ">=3.10"
authors = [
  { name = "Arquitetura de Dados" }
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
